bluec-tests/tests/valid/types_short/multi/return_short.c
short add(short a, short b) {
    return a + b;
}