bluec-tests/tests/invalid/types_pointer/cast_to_declarator.c
int main(void)
{
    return (int **a)(10);
}